feat: adequa Editora ao padrão de arquitetura e JPA